--- a/react_task_1b/src/index.css
+++ b/react_task_1b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+  --primary-color: #9BFF00;
+  --secondary-color: #DBFD51;
+  --page-background: #000000;
+  --gray: #1D1D1D;
+  --white: #FFFFFF;
+  --primary-btn-text: #050505;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,6 +19,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.flex {
+  /* display: flex */
 }
 
 @tailwind base;
