--- a/react_task_1b/src/styles/AdminDashboardPage.css
+++ b/react_task_1b/src/styles/AdminDashboardPage.css
@@ -137,6 +137,25 @@ body {
     text-align: end;
 }
 
+.next-prev-section {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.control-btn {
+    background-color: var(--primary-color);
+    height: 40px;
+    border-radius: 16px;
+    padding: 0 20px;
+}
+
+.control-btn:disabled {
+    color: var(--gray)
+}
+
 .v-align {
     display: flex;
     align-items: center;
