--- a/react_task_1b/src/styles/AdminDashboardPage.css
+++ b/react_task_1b/src/styles/AdminDashboardPage.css
@@ -79,7 +79,21 @@ body {
     text-align: right;
 }
 
-.table-header, .sno {
+.table-header-row, .row {
+    display: grid;
+    grid-template-columns: 30px auto 100px 100px;
+    gap: 10px;
+}
+
+.row {
+    border: 1px solid #666666;
+    margin-bottom: 20px;
+    border-radius: 16px;
+    padding: 16px 10px;
+    cursor: move;
+}
+
+.table-header-row, .sno {
     color: #666666;
     font-size: 16px;
 }
@@ -87,24 +101,6 @@ body {
 .sno-header {
     padding-left: 10px;
     padding-right: 10px;
-}
-
-.cell {
-    border-top: 1px solid #666666;
-    border-bottom: 1px solid #666666;
-    padding: 10px;
-}
-
-.left-cell {
-    border-left: 1px solid #666666;
-    border-top-left-radius: 16px;
-    border-bottom-left-radius: 16px;
-}
-
-.right-cell {
-    border-right: 1px solid #666666;
-    border-top-right-radius: 16px;
-    border-bottom-right-radius: 16px;
 }
 
 .video-title-section {
@@ -160,3 +156,9 @@ body {
     display: flex;
     align-items: center;
 }
+
+
+
+
+
+
